// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";
import "gogo.proto";
import "google/protobuf/timestamp.proto";

package objects;

// SerializableMeta is the object metadata that will be stored serialized
message SerializableMeta {
	string content_type = 1;
	map<string, string> user_defined = 2;
}