// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package objects;

message StorjMetaInfo {
	// Name of the bucket.
	string Bucket = 1;

	// Name of the object.
	string Name = 2; 

	// Total object size.
	int64 Size = 4;

	// IsDir indicates if the object is prefix.
	bool IsDir= 5;

	// Hex encoded unique entity tag of the object.
	string ETag = 6; 

	// A standard MIME type describing the format of the object.
	string ContentType= 7; 

	// Specifies what content encodings have been applied to the object and thus
	// what decoding mechanisms must be applied to obtain the object referenced
	// by the Content-Type header field.
	string ContentEncoding= 8; 

	// Specify object storage class
	string StorageClass= 9; 

    //add custom fields here 
	map<string, string> Metadata= 10;

	// modified time
	google.protobuf.Timestamp ModifiedTime= 11;
}

//Object Info Meta data
message MetaObjInfo {
   StorjMetaInfo objinfo = 1;
}